# kepmaps

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
data/: bids.json  kepmaps.json
kepmaps/: __init__.py  __main__.py
kepmaps/datasets/: annotation.py  dataset.py  utils.py
kepmaps/kepmap/: __init__.py  kepmap.py
kepmaps/tests/: test_utils.py
notebooks/profile_default/: trials.ipynb
tests/: conftest.py  test_cli.py
